<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <anton.dev.uikit.text.BaseTextView
        android:id="@+id/base_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hello"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <anton.dev.uikit.text.BaseTextView
        android:id="@+id/enter_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_enter_login_password_please"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_6"
        android:layout_marginTop="@dimen/space_3"
        android:layout_marginEnd="@dimen/space_6"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_login_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_6"
        android:layout_marginTop="@dimen/space_3"
        android:layout_marginEnd="@dimen/space_6"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:layout_marginEnd="@dimen/space_6"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/enter"
        app:cornerRadius="@dimen/space_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <anton.dev.uikit.text.BaseTextView
        android:id="@+id/no_account_yet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:text="@string/i_have_no_account"
        app:layout_constraintBottom_toBottomOf="@+id/enter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enter_button" />

</androidx.constraintlayout.widget.ConstraintLayout>