<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wave_top_image"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:background="@drawable/wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <anton.dev.uikit.text.BaseTextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/create_account"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fio_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_6"
            android:layout_marginTop="@dimen/space_6"
            android:layout_marginEnd="@dimen/space_6"
            android:hint="@string/fio_hint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_6"
            android:layout_marginTop="@dimen/space_3"
            android:layout_marginEnd="@dimen/space_6"
            android:hint="@string/email_hint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_6"
            android:layout_marginTop="@dimen/space_3"
            android:layout_marginEnd="@dimen/space_6"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/password_hint" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:layout_marginEnd="@dimen/space_6"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/create"
        app:cornerRadius="@dimen/space_6"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>